@@ -31,7 +31,7 @@ import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.time.Duration;
-import java.util.Map;
+import java.util.Collections;
 import java.util.UUID;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
@@ -212,7 +212,7 @@ class WebsocketClientConnectionTest extends BaseTest {
         new WebsocketGatewayClient(
             GatewayClientSettings.builder()
                 .address(gatewayAddress)
-                .headers(Map.of(headerKey, headerValue))
+                .headers(Collections.singletonMap(headerKey, headerValue))
                 .build(),
             CLIENT_CODEC);
     TestService service =
